<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Mobile OurVLE</string>
    <string name="field_login_username">Username</string>
    <string name="field_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="remember">Remember Me</string>
    <string name="keep_login">Keep Me Logged In</string>
    <string name="log_out">Logging Out</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="log_out_ourvle">Log out</string>
    <string name="close">Close application</string>
    <string name="log_out_prompt">Are you sure you want to log out of OurVLE?</string>
    <string name="send_icon_title">Send Reply</string>
    <string name="reply_icon_title">Reply</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_main">Main</string>
    <string name="title_course_list">My Courses</string>
    <string name="title_login">Login</string>
    <string name="text_image">Image</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="header_courses">COURSES</string>
    <string name="ftext_num_courses">%s courses</string>
    <string name="field_holder_first_line">My Application</string>
    <string name="field_holder_second_line">My Application is super good lorem ipsum dolor is a cool phrase haha ha ha.</string>
    <string name="field_holder_course_managers">A. HAMILTON, P. STEWART</string>
    <string name="header_site_news">SITE NEWS</string>
    <string name="ftext_by_author">by: %s</string>
    <string name="no_courses">You are not enrolled in any courses.</string>
    <string name="no_discussions">There no discussions.</string>
    <string name="no_discussion_posts">There no posts in this discussions.</string>
    <string name="no_profile">No additional profile fields.</string>
    <string name="no_participants">No participants.</string>
    <string name="no_course_contents">There are no documents for this course.</string>
    <string name="no_course_photos">You have added no photos for this course</string>
    <string name="no_course_videoes">You have added no videos for this course</string>
    <string name="no_course_voice_notes">No voice notes for this course</string>
    <string name="no_course_notes">You have added no notes for this course</string>
    <string name="no_course_classes">You have added no classes for this course</string>
    <string name="no_course_events">No events for this course</string>
    <string name="no_activities">No course activities</string>
    <string name="text_field_holder2">AIM</string>
    <string name="text_new_profile">Add new profile</string>
    <string name="under_development">Still under development</string>
    <string name="text_in_progress">In Progress</string>
    <string name="field_note">Note:</string>
    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="text_class_type">Class Type</string>
    <string name="text_calendar">Calendar</string>
    <string name="provider_label_course_class_times">Course Class Times</string>
    <string name="title_activity_course_content_resource">CourseContentResourceActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav">Navigation</string>
    <string name="course"> My Courses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_menu_option">My Courses</string>
    <string name="profile_menu_option">My Profile</string>
    <string name="message_menu_option">Administrator Messages</string>
    <string name="resource_menu_option">Resources</string>
    <string name="schedule_menu_option">My Schedule</string>
    <string name="note_menu_option">My Notes</string>
    <string name="photo_menu_option">My Photos</string>
    <string name="video_menu_option">My Videos</string>
    <string name="participant_menu_option">Course Participants</string>
    <string name="title_home">Home</string>
    <string name="summary_menu">Summary</string>
    <string name="material_menu">Materials</string>
    <string name="acitivity_menu">Activities</string>
    <string name="ourvle_short">OurVLE</string>
    <string name="ourvle_long">Our Virtual Learning Environment</string>

</resources>