<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/resources_option"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/resource_menu_option"/>

    <item android:id="@+id/schedule_option"
        app:showAsAction="never"
        android:title="@string/schedule_menu_option"/>

    <item android:id="@+id/notes_option"
        app:showAsAction="never"
        android:title="@string/note_menu_option"/>

    <item android:id="@+id/photos_option"
        app:showAsAction="never"
        android:title="@string/photo_menu_option"/>

    <item android:id="@+id/videos_option"
        app:showAsAction="never"
        android:title="@string/video_menu_option"/>

    <item android:id="@+id/participants_option"
        app:showAsAction="never"
        android:title="@string/participant_menu_option"/>

</menu>
