<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=
        "edu.uwi.mona.mobileourvle.app.Activities.CourseListActivity">

    <item android:id="@+id/courses_option"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/course_menu_option"/>

    <item android:id="@+id/view_profile"
        app:showAsAction="never"
        android:title="@string/profile_menu_option"/>

    <item android:id="@+id/messages"
        app:showAsAction="never"
        android:title="@string/message_menu_option"/>

    <item android:id="@+id/log_out"
        app:showAsAction="never"
        android:title="Log Out"/>

</menu>