<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/text_image"
        android:src="@drawable/ic_time"
        android:padding="5dp" />




    <TextView
        android:id="@+id/textview_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/field_holder_first_line"
        android:paddingTop="5dp"
        style="@style/PrimaryText" />





    <TextView
        android:id="@+id/textview_event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_event_name"
        android:layout_toRightOf="@+id/imageView1"
        android:singleLine="true"
        android:text="@string/field_holder_second_line"
        android:paddingTop="5dp"
        android:textColor="@color/tertiary_text_light"
        style="@style/SecondaryText" />

</RelativeLayout>