<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >





    <ImageView
        android:id="@+id/imageview_field_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/text_image"
        android:scaleType="fitStart"
        android:src="@drawable/chat_icon" />


    <TextView
        android:id="@+id/textview_field_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="3dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imageview_field_icon"
        android:text="@string/text_field_holder2"
        android:textSize="@dimen/text_tertiary" />


    <TextView
        android:id="@+id/textview_field_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_field_type"
        android:layout_toRightOf="@+id/imageview_field_icon"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_secondary"
        android:text="@string/field_holder_first_line" />

</RelativeLayout>