<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


    <LinearLayout
        style="@style/PaddedListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

	    <TextView
	        android:id="@+id/textview_course"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/field_holder_first_line"
	        style="@style/SmallTextLabel" />

	    <TextView
	        android:id="@+id/TextView01"
	        style="@style/SmallText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:text="@string/text_calendar" />
	    
	    <Spinner
	        android:id="@+id/spinner_calendars"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp" />
	    
	    <EditText
	        android:id="@+id/edittext_class_type"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:singleLine="true"
	        android:hint="@string/text_class_type" />

	    <Spinner
	        android:id="@+id/spinner_weekdays"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Location"
            android:ems="10"
            android:id="@+id/editText_class_location"
            android:singleLine="true"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="-6dip"
            android:animateLayoutChanges="false">
	            
			<TextView
	            android:id="@+id/from_label"
	            android:text="@string/text_start_time"
	            android:layout_width="0px"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="0dip"
	            android:layout_weight="4"
	            style="@style/SmallText"
		        android:paddingTop="5dp" />
			
			<TextView
	            android:id="@+id/to_label"
	            android:text="@string/text_end_time"
	            android:layout_width="0px"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="0dip"
	            android:layout_weight="4"
	            style="@style/SmallText"
		        android:paddingTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="-6dip"
            android:animateLayoutChanges="false">

            <Button
                android:id="@+id/button_start_time"
                style="@style/TextAppearance.EditEvent_SpinnerButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dip"
                android:layout_weight="4" />

            <Button
                android:id="@+id/button_end_time"
                style="@style/TextAppearance.EditEvent_SpinnerButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dip"
                android:layout_weight="4" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>