<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	style="@style/PaddedFragment">

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/analogClock1"
        android:layout_marginLeft="10dp"
        android:gravity="center|center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/no_activities"
        android:textStyle="bold"
        android:textColor="@color/tertiary_text_light" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/analogClock1"
        android:layout_marginLeft="10dp" />
    
    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/empty"
        android:layout_alignParentTop="true" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/analogClock1"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imagebutton_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/digitalClock1"
        android:layout_below="@+id/digitalClock1"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_transparent_pressed_grey"
        android:contentDescription="@string/text_image"
        android:src="@drawable/profile_icon" />
    <TextView
        android:id="@+id/textview_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imagebutton_profile"
        android:layout_alignTop="@+id/imagebutton_profile"
        android:layout_toRightOf="@+id/imagebutton_profile"
        android:gravity="center_vertical"
        android:text="@string/field_holder_first_line" />

    <TextView
        android:id="@+id/textview_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imagebutton_profile"
        android:layout_below="@+id/imagebutton_profile"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_usage"
        android:gravity="center_vertical"
        android:text="@string/text_in_progress" />

</RelativeLayout>