<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp"
    android:background="@drawable/login_background"
    tools:context=".Fragments.LoginFragment" >
    <TextView
        android:id="@+id/ourvle_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:text="@string/ourvle_short"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/ourvle_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/ourvle_long"
        android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/id_number"
            android:layout_marginTop="40dp"
            android:text="@string/field_login_username"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    <TextView
            android:layout_marginTop="40dp"
            android:text="Authenticating..."
            android:ems="10"
            android:textSize="20sp"
            android:textColor="#BBB"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>